[tool.poetry]
name = "test-task-leadhit"
version = "0.1.0"
description = "Test project"
authors = ["Mikhail Moskovkin <anstane228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
tinydb = "^4.8.0"
pytest = "^7.4.3"
pytest-flask = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
